<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iccard.ICCardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="50dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="ICCard Activity"
            android:textColor="#FB0000"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btn_my_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_card_list"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_add_permanent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_permanent_ic_card"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_add_timed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_period_id_card"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_get_all_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_all_ic_card"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_clear_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_all_ic_card"
            android:textAllCaps="false" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>